# LLM-As-Hierarchical-Policy

./: README.md  pyproject.toml
hlm/: __init__.py
hlm/app/: compute_gmr.py  evaluate_qa.py  get_examples_for_tournament.py  run_tournament.py
hlm/prompts/: 0shot.txt  compare_answer.txt  dynamic_1shot.txt  use_techniques.txt
hlm/utils/: answer_utils.py  dataset_utils.py  math_answer_utils.py  metric_utils.py  misc.py  model_utils.py  openai_utils.py  prompt_utils.py  retrieval_utils.py  text_utils.py
results/math_hard_20/ablation/: tournament-gpt-3.5-num=1.json  tournament-gpt-3.5-num=3.json  tournament-gpt-3.5-num=5.json  tournament-gpt-4-num=3.json  tournament-gpt-4-num=5.json
results/math_hard_20/tournament/: gpt-3-key_techniques.json  gpt-3-retrieval.json
scripts/: openai_hard.sh  openai_hard_20.sh
