[project]

name = "HLM"

description = "software"

version = "1.0.0"

authors = [
    { name = "Zhan Ling", email = "z6ling@ucsd.edu" }
]

dependencies = [
    "openai",
    "numpy
    "sympy",
    "wget",
    "IPython",
    "tiktoken",
    'tabulate',
    "sentence-transformers",
    "mmengine",
]


[tool.poetry]
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "License  :: Research use",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.black]
line-length = 200
target-version = ['py310', 'py311']
include = '\.pyi?$'
ignore = ["E226", "E302", "E41"]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.setuptools]
py-modules = ["hlm"]

[tool.pylint.format]
max-line-length = "200"
